--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@ lab/lab/Debug/
 lab/lab/Release
 lab/lab/Release/
 lab/.vs/lab/v14/.atsuo
+
 Circuito/circuito.pdsprj
 Circuito/Backup Of circuito.pdsbak
+Circuito/circuito.pdsprj
